# MCPTBlender

./: CMakeLists.txt  README.md
data/: README
include/: curvepredictor.h  imagedenoiser.h  imageloader.h
oidn-2.0.1/: README
openexr-3.2.0/: README
src/: curvepredictor.cpp  imagedenoiser.cpp  imageloader.cpp  main.cpp
